--- a/.htaccess
+++ b/.htaccess
@@ -5,5 +5,5 @@
 
 
     RewriteRule \.(?:css|js|jpe?g|gif|png)$ - [L]
-    RewriteRule ^(.*)$ router.php?action=$1 [QSA,L]
+    RewriteRule ^api/(.*)$ route-api.php?resource=$1 [QSA,L,END]
 </IfModule>
