--- a/.htaccess
+++ b/.htaccess
@@ -2,8 +2,6 @@
 	RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} -f [OR]
     RewriteCond %{REQUEST_FILENAME} -d
-
-
     RewriteRule \.(?:css|js|jpe?g|gif|png)$ - [L]
-    RewriteRule ^api/(.*)$ route-api.php?resource=$1 [QSA,L,END]
+    RewriteRule ^(.*)$ route-api.php?resource=$1 [QSA,L,END]
 </IfModule>
